[package]
name = "rust-ws-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ws = "0.9.2"
tokio = { version = "1.21.2", features = ["full"] }
deku = { version = "0.14", default-features = false, features = ["alloc"] }
clap = { version = "4.0.15", features = ["derive"] }
